--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/baseline_horizontal_rule_24"
-                android:backgroundTint="@color/grey"/>
+                android:backgroundTint="@color/grey"
+                android:autofillHints=""
+                android:inputType="none" />
 
 
             <Button
