--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -46,6 +46,15 @@
             android:maxLines="1"
             android:autofillHints=""
             android:inputType="text" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="170dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:id="@+id/imgNote"/>
+
         <EditText
             android:id="@+id/addNoteDesc"
             android:layout_width="match_parent"
@@ -63,5 +72,7 @@
 
 
     </RelativeLayout>
+
+
 
 </layout>
