--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -8,4 +8,9 @@
         android:title="Delete"
         app:showAsAction="always"/>
 
+    <item android:id="@+id/addImage"
+        android:title="Image"
+        android:icon="@drawable/baseline_image_24"
+        app:showAsAction="always"/>
+
 </menu>
