--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -54,7 +54,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/noteImg"
+            android:id="@+id/EditnoteImg"
             android:background="@drawable/border"
             android:layout_below="@id/editNoteTitle"/>
         <EditText
