--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -39,7 +39,11 @@
                 android:textStyle="bold"
                 android:textSize="18sp"/>
 
-
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:id="@+id/noteImg"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
